--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -63,7 +63,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=gyf.GYF
+main.class=test.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
