--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,10 +31,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/GYF.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.javax.mail.jar=C:\\Users\\anwer\\Downloads\\Compressed\\javax.mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
