--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,15 +24,19 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/GYF.jar
+dist.jar=${dist.dir}/GYF-master.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.controlsfx-8.40.11.jar=C:\\Users\\omarb\\Dropbox\\PC\\Downloads\\controlsfx-8.40.11.jar
 file.reference.javax.mail.jar=C:\\Users\\omarb\\Downloads\\javax.mail.jar
+file.reference.jfoenix-8.0.10.jar=C:\\Users\\omarb\\Dropbox\\PC\\Downloads\\jfoenix-8.0.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.jfoenix-8.0.10.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
