--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,14 +31,16 @@ dist.dir=dist
 dist.jar=${dist.dir}/GYF.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.AnimateFX-1.2.0.jar=AnimateFX-1.2.0.jar
+file.reference.AnimateFX-x86_x64-bin.jar=AnimateFX-x86_x64-bin.jar
 file.reference.commons-lang3-3.12.0.jar=commons-lang3-3.12.0.jar
-file.reference.javax.mail.jar=javax.mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.commons-lang3-3.12.0.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.AnimateFX-x86_x64-bin.jar}:\
+    ${file.reference.AnimateFX-1.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
