--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,13 +34,15 @@ excludes=
 file.reference.AnimateFX-1.2.0.jar=AnimateFX-1.2.0.jar
 file.reference.AnimateFX-x86_x64-bin.jar=AnimateFX-x86_x64-bin.jar
 file.reference.commons-lang3-3.12.0.jar=commons-lang3-3.12.0.jar
+file.reference.jfoenix-8.0.10.jar=C:\\Users\\akram\\Downloads\\jfoenix-8.0.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.commons-lang3-3.12.0.jar}:\
     ${file.reference.AnimateFX-x86_x64-bin.jar}:\
-    ${file.reference.AnimateFX-1.2.0.jar}
+    ${file.reference.AnimateFX-1.2.0.jar}:\
+    ${file.reference.jfoenix-8.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
