--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,13 +32,19 @@ excludes=
 file.reference.controlsfx-8.40.11.jar=C:\\Users\\omarb\\Dropbox\\PC\\Downloads\\controlsfx-8.40.11.jar
 file.reference.javax.mail.jar=C:\\Users\\omarb\\Downloads\\javax.mail.jar
 file.reference.jfoenix-8.0.10.jar=C:\\Users\\omarb\\Dropbox\\PC\\Downloads\\jfoenix-8.0.10.jar
+file.reference.qrgen-1.2.jar=C:\\Users\\omarb\\Dropbox\\PC\\Downloads\\qrgen-1.2.jar\\qrgen-1.2.jar
+file.reference.zxing-core-1.7.jar=C:\\Users\\omarb\\Dropbox\\PC\\Downloads\\zxing-core-1.7.jar\\zxing-core-1.7.jar
+file.reference.zxing-j2se-1.7.jar=C:\\Users\\omarb\\Dropbox\\PC\\Downloads\\zxing-j2se-1.7.jar\\zxing-j2se-1.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.jfoenix-8.0.10.jar}:\
-    ${file.reference.controlsfx-8.40.11.jar}
+    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.qrgen-1.2.jar}:\
+    ${file.reference.zxing-core-1.7.jar}:\
+    ${file.reference.zxing-j2se-1.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
