module_complete_sans_design

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,13 +28,15 @@ dist.jar=${dist.dir}/GYF.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.activation.jar=C:\\Users\\boukr\\Documents\\NetBeansProjects\\jaf-1_1_1\\jaf-1.1.1\\activation.jar
+file.reference.jfoenix-8.0.10.jar=C:\\Users\\boukr\\Documents\\NetBeansProjects\\jfoenix-8.0.10.jar
 file.reference.mail.jar=C:\\Users\\boukr\\Documents\\NetBeansProjects\\javamail-1_2\\javamail-1.2\\mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.mail.jar}:\
-    ${file.reference.activation.jar}
+    ${file.reference.activation.jar}:\
+    ${file.reference.jfoenix-8.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
