--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,20 @@ dist.dir=dist
 dist.jar=${dist.dir}/GYF.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-lang3-3.12.0.jar=src\\pictures\\commons-lang3-3.12.0.jar
+file.reference.itextpdf-5.5.9.jar=C:\\Users\\moham\\OneDrive\\Desktop\\itextpdf-5.5.9.jar
+file.reference.itextpdf-5.5.9.jar-1=src\\pictures\\itextpdf-5.5.9.jar
+file.reference.jfoenix-8.0.10.jar=src\\pictures\\jfoenix-8.0.10.jar
+file.reference.TrayTester.jar=src\\pictures\\TrayTester.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.itextpdf-5.5.9.jar}:\
+    ${file.reference.itextpdf-5.5.9.jar-1}:\
+    ${file.reference.TrayTester.jar}:\
+    ${file.reference.commons-lang3-3.12.0.jar}:\
+    ${file.reference.jfoenix-8.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +65,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=test.Main
+main.class=test.NewFXMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
