--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 compile.on.save=true
-
+user.properties.file=C:\\Users\\moham\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 do.depend=false
 do.jar=true
 javac.debug=true
