--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,12 @@ dist.jar=${dist.dir}/GYF.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-lang3-3.12.0.jar=src\\pictures\\commons-lang3-3.12.0.jar
+file.reference.itextpdf-5.5.9.jar=C:\\Users\\moham\\OneDrive\\Desktop\\itextpdf-5.5.9.jar
+file.reference.itextpdf-5.5.9.jar-1=src\\pictures\\itextpdf-5.5.9.jar
+file.reference.jfoenix-8.0.10.jar=src\\pictures\\jfoenix-8.0.10.jar
+file.reference.TrayTester.jar=src\\pictures\\TrayTester.jar
+
 file.reference.AnimateFX-1.2.0.jar=AnimateFX-1.2.0.jar
 file.reference.AnimateFX-x86_x64-bin.jar=AnimateFX-x86_x64-bin.jar
 file.reference.commons-lang3-3.12.0.jar=commons-lang3-3.12.0.jar
@@ -61,6 +67,12 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
+
+    ${file.reference.itextpdf-5.5.9.jar}:\
+    ${file.reference.itextpdf-5.5.9.jar-1}:\
+    ${file.reference.TrayTester.jar}:\
+    ${file.reference.commons-lang3-3.12.0.jar}:\
+
     ${file.reference.commons-lang3-3.12.0.jar}:\
     ${file.reference.AnimateFX-x86_x64-bin.jar}:\
     ${file.reference.AnimateFX-1.2.0.jar}:\
@@ -108,7 +120,6 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-
 
 main.class=test.main_main
 
